# ai-stickers

./: .dockerignore  .envrc.example  .gitignore  CRUSH.md  Dockerfile  Makefile  docker-compose.yaml  main.py  pyproject.toml  test.py
.github/workflows/: actions.yaml  deploy-api.yaml  deploy-bot.yml  deploy.yml
alembic/: env.py
alembic/versions/: 2229649d48c0_change_password_field_from_varchar_to_.py  2586882db843_add_name_to_sticker_pack_table.py  3219f86237e0_change_title_to_varchar.py  3ada8df33d63_add_telegram_file_unique_id_to_stickers_.py  557d8f6c5016_add_emoji_and_text_to_images.py  5ada8df33d63_add_telegram_file_unique_id_to_stickers_.py  5afc8c466927_set_id_s_to_null_when_deleting_a_user.py  645c16e9e845_change_image_columns_to_point_to_url.py  662d1d142383_add_sticker_pack_id_to_the_images_table.py  79dedccc6231_add_payment_session_id_to_transaction_.py  820f695da917_rename_telegram_file_id_for_telegram_.py  85c81784a2f2_create_tables.py  961e166462cd_create_payment_sessions_table.py  a6f195fe346b_change_img_storage_from_text_to_.py  (+7 more)
client/: .env.example  TODO  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
db/: create_db.sql  seed.sql
k8s/: create_secret.sh  create_secret_and_cm.sh  deployment.yaml  infisical-crd.yaml  migration-job.yaml  secret.yaml
sentryBot/: Dockerfile  app.py  pyproject.toml
src/: auth.py  billing.py  custom_swagger.py  database.py  db_operations.py  hashed_pwd.py  main.py  models.py  schemas.py  security.py  sticker_factory.py  storage.py  telegram_bot.py  utils.py
(+101 files in other folders)
