[project]
name = "ai-sticker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "fastapi[standard]>=0.116.1",
    "openai>=1.98.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]


[tool.alembic]
script_location = "%(here)s/alembic"
prepend_sys_path = [
    "."
]
